# ncfw

./: CMakeLists.txt  LICENSE  README.md
include/: ncfw.hpp  ncont.hpp  nterm.hpp  ntypes.hpp  nwin.hpp
src/: ncont.cpp  nterm.cpp  nwin.cpp
tests/: CMakeLists.txt  ncfw_tests.cpp
